# sql-arena

./: Dockerfile  README.md  deploy.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_environment.py  test_graders.py  validate.py
server/: app.py
src/sql_arena/: __init__.py  database.py  environment.py  graders.py  models.py  server.py  tasks.py
tests/: test_env.py
