[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-arena"
version = "1.0.0"
description = "Interactive SQL query challenge OpenEnv environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vudumula Naga Sai Rahul", email = "nagasairahulvudumula@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "src.sql_arena.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]